# lambda-explorer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  Makefile  README.md  __init__.py  __main__.py  aero.py  calc.py  defaults.yaml  global_default.yaml  layout.ini  open_windows.json  pyproject.toml  requirements.txt
docs/: developer_guide.md
lambda_explorer/: __init__.py  __version__.py  cli.py
lambda_explorer/formulas/: __init__.py  propulsion.py  thermodynamics.py
lambda_explorer/tools/: __init__.py  aero_formulas.py  aero_tools.py  default_manager.py  defaults.json  defaults.yaml  formula_base.py  formula_registry.py  gui_tools.py  interpolation_formula.py  layout_manager.py  solver.py  window_state_manager.py
tools/: aero_tools.py  gui_tools.py
